# Advent-Of-Code-2024

./: .gitignore  README.md
Python/: main.py
Python/src/: day_1.py  day_2.py  day_3.py  utils.py
Python/tests/: test_day_1.py
Rust/files/: day_15.txt  day_15_instructions.txt
Rust/src/: day_1.rs  day_10.rs  day_13.rs  day_14.rs  day_17.rs  day_2.rs  day_7.rs  day_8.rs  day_9.rs  day_template.rs  main.rs  utils.rs
cpp/: CMakeLists.txt  Day1.cpp  Day1.h  Day2.cpp  Day2.h  Day3.cpp  Day3.h  Utils.cpp  Utils.h  main.cpp
files/: day_5_pages.txt  day_5_pairs.txt
src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_15.rs  day_16.rs  day_17.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  day_template.rs  main.rs
